# observability-dashboard

./: .dockerignore  .gitignore  .importlinter  .pre-commit-config.yaml  Brewfile  CLAUDE.md  Dockerfile  Makefile  README.md  Tiltfile  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yml  check.yml  publish.yml  push.yml
app/: main.py
app/agent_monitor/models/: events.py
app/api/routes/: filters.py  traces.py  websockets.py
app/core/: connection_manager.py  filter_registry.py  span_preprocessor.py  state.py
app/models/: events.py  filters.py
app/utils/: extractors.py  factories.py
backend/: Dockerfile  README.md  Tiltfile  pyproject.toml
backend/src/: connection_manager.py  events.py  main.py  span_preprocessor.py
backend/src/agent_monitor/: main.py
backend/tests/: mock_spans.json  test_integration.py
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  namespace.yaml  service.yaml
deploy/base/: kustomization.yaml  namespace.yaml
deploy/base/agent-communications-dashboard-backend/: deployment.yaml
deploy/base/observability-dashboard/: deployment.yaml  service.yaml
deploy/local/: deployment-patch.yaml  kustomization.yaml
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
frontend/src/: index.css
src/agent_monitor/: main.py
test/: mock_spans.json  test_factories.py  test_filter_api.py  test_integration.py
tests/: mock_spans.json  test_integration.py
(+36 files in other folders)
